--- a/css/page.index.css
+++ b/css/page.index.css
@@ -1,5 +1,5 @@
 html,body{margin:0;padding:0;}
-body {background-color:#f4f4f4;background-image:url('/img/1434712922294-2.jpg');font-family:Arial,'微软雅黑','宋体';}
+body {background-color:#f4f4f4;background:url('/img/1434712922294-2.jpg') center center no-repeat;font-family:Arial,'微软雅黑','宋体';}
 a:link{text-decoration:none;} a:visited{text-decoration:none;} a:active{text-decoration:none;}
 
 .col{}
